Чистка css вложенностей

--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -41,8 +41,8 @@
     fill: #afb1b8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients-logo:hover,
-.clients-logo:focus {
-    fill: var(--accent-color);
+    &:hover,
+    &:focus {
+        fill: var(--accent-color);
+    }
 }
