--- a/scss/layout/_desc.scss
+++ b/scss/layout/_desc.scss
@@ -75,9 +75,9 @@
     width: 44px;
     height: 44px;
     margin-right: 10px;
-}
-.social-item:last-child {
-    margin-right: 0;
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 .social-icon {
