--- a/css/main.css
+++ b/css/main.css
@@ -107,13 +107,13 @@ img {
   color: var(--title-text-color);
 }
 
-.section-title-text:last-child {
-  margin-right: 0;
-}
-
 .section-title-text {
   width: 270px;
   margin-right: 30px;
+}
+
+.section-title-text:last-child {
+  margin-right: 0;
 }
 
 .section-icons {
@@ -142,8 +142,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-btn:hover,
-.main-btn:focus {
+.main-btn:hover, .main-btn:focus {
   background-color: #188ce8;
 }
 
@@ -161,8 +160,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover,
-.social-link:focus {
+.social-link:hover, .social-link:focus {
   background-color: var(--accent-color);
 }
 
@@ -194,8 +192,7 @@ img {
   position: relative;
 }
 
-.menu-link:hover,
-.menu-link:focus {
+.menu-link:hover, .menu-link:focus {
   color: var(--accent-color);
 }
 
@@ -244,8 +241,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-icon:focus,
-.modal-close-icon:hover {
+.modal-close-icon:focus, .modal-close-icon:hover {
   fill: var(--accent-color);
 }
 
@@ -305,7 +301,6 @@ img {
   margin-top: 6px;
   padding: 12px 16px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -393,8 +388,7 @@ img {
   display: flex;
 }
 
-.modal-form-button:hover,
-.modal-form-button:focus {
+.modal-form-button:hover, .modal-form-button:focus {
   background-color: #188ce8;
 }
 
@@ -684,8 +678,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-logo:hover,
-.clients-logo:focus {
+.clients-logo:hover, .clients-logo:focus {
   fill: var(--accent-color);
 }
 
@@ -718,8 +711,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-btn:hover,
-.portfolio-btn:focus {
+.portfolio-btn:hover, .portfolio-btn:focus {
   background: #2196f3;
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -754,13 +746,12 @@ img {
   border: 1px solid #eeeeee;
 }
 
-.portfolio-focus:hover,
-.portfolio-focus:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .portfolio-focus {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-focus:hover, .portfolio-focus:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-focus-text {
@@ -902,7 +893,6 @@ img {
   border-radius: 4px;
   padding: 10px;
   color: #ffffff;
-  font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -917,7 +907,6 @@ img {
   background-color: var(--accent-color);
   border: solid var(--accent-color);
   color: #ffffff;
-  font-family: Roboto;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -944,12 +933,6 @@ img {
   margin-right: 0;
 }
 
-.join-link:hover,
-.join-link:focus {
-  background-color: var(--accent-color);
-  border-radius: 50%;
-}
-
 .join-icon {
   fill: #ffffff;
 }
@@ -963,5 +946,10 @@ img {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.join-link:hover, .join-link:focus {
+  background-color: var(--accent-color);
+  border-radius: 50%;
 }
 /*# sourceMappingURL=main.css.map */
