--- a/scss/components/_main-btn.scss
+++ b/scss/components/_main-btn.scss
@@ -13,11 +13,12 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        background-color: #188ce8;
+    }
 }
-.main-btn:hover,
-.main-btn:focus {
-    background-color: #188ce8;
-}
+
 .btn-light {
     color: var(--primary-white-color);
 }
