--- a/scss/components/_menu-link.scss
+++ b/scss/components/_menu-link.scss
@@ -7,11 +7,12 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
-.menu-link:hover,
-.menu-link:focus {
-    color: var(--accent-color);
-}
+
 .menu-link.current::after {
     content: '';
     width: 100%;
