--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -37,11 +37,10 @@
     height: 40px;
     padding-left: 30px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-input:focus {
-    outline: none;
-    border-color: var(--accent-color);
+    &:focus {
+        outline: none;
+        border-color: var(--accent-color);
+    }
 }
 
 .modal-form-message {
@@ -53,21 +52,18 @@
     margin-top: 6px;
     padding: 12px 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
-}
-
-.modal-form-message:focus {
-    outline: none;
-    border-color: var(--accent-color);
-}
-
-.modal-form-message::placeholder {
-    color: rgba(177, 117, 117, 0.5);
+    &:focus {
+        outline: none;
+        border-color: var(--accent-color);
+    }
+    &::placeholder {
+        color: rgba(177, 117, 117, 0.5);
+    }
 }
 
 .modal-form-icon {
@@ -138,8 +134,8 @@
     padding: 10px 55px 10px 56px;
     margin: 0 auto;
     display: flex;
-}
-.modal-form-button:hover,
-.modal-form-button:focus {
-    background-color: #188ce8;
+    &:hover,
+    &:focus {
+        background-color: #188ce8;
+    }
 }
