--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -14,9 +14,8 @@
 .modal-close-icon {
     fill: #000000;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus,
+    &:hover {
+        fill: var(--accent-color);
+    }
 }
-.modal-close-icon:focus,
-.modal-close-icon:hover {
-    fill: var(--accent-color);
-}
-
