--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -31,12 +31,12 @@
     color: var(--title-text-color);
 }
 
-.section-title-text:last-child {
-    margin-right: 0;
-}
 .section-title-text {
     width: 270px;
     margin-right: 30px;
+    &:last-child {
+        margin-right: 0;
+    }
 }
 .section-icons {
     border-radius: 4px;
