--- a/scss/components/_social-link.scss
+++ b/scss/components/_social-link.scss
@@ -7,11 +7,12 @@
     justify-content: center;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+    }
 }
-.social-link:hover,
-.social-link:focus {
-    background-color: var(--accent-color);
-}
+
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
     fill: #ffffff;
