--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -102,7 +102,6 @@
     border-radius: 4px;
     padding: 10px;
     color: #ffffff;
-    font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -117,7 +116,6 @@
     background-color: var(--accent-color);
     border: solid var(--accent-color);
     color: #ffffff;
-    font-family: Roboto;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -141,11 +139,7 @@
 .join-item:last-child {
     margin-right: 0;
 }
-.join-link:hover,
-.join-link:focus {
-    background-color: var(--accent-color);
-    border-radius: 50%;
-}
+
 .join-icon {
     fill: #ffffff;
 }
@@ -159,4 +153,9 @@
     border-radius: 50%;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        border-radius: 50%;
+    }
 }
