--- a/css/main.css
+++ b/css/main.css
@@ -174,40 +174,6 @@ img {
   justify-content: center;
 }
 
-.menu-list .link.current {
-  color: var(--accent-color);
-}
-
-.menu-list {
-  display: flex;
-}
-
-.menu-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-}
-
-.menu-link:hover, .menu-link:focus {
-  color: var(--accent-color);
-}
-
-.menu-link.current::after {
-  content: '';
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-  position: absolute;
-  left: 0;
-  bottom: -32px;
-  cursor: default;
-}
-
 .backdrop {
   width: 100vw;
   height: 100vh;
@@ -355,10 +321,6 @@ img {
   margin-right: 7px;
 }
 
-.accept-policy-contract {
-  color: var(--accent-color);
-}
-
 .modal-form-checkbox:checked + .modal-form-checkbox-label::before {
   background-image: url(../images/icon-check.svg);
   background-color: var(--accent-color);
@@ -368,6 +330,10 @@ img {
 
 .modal-form-checkbox:focus + .modal-form-checkbox-label::before {
   outline: 0.5px solid black;
+}
+
+.accept-policy-contract {
+  color: var(--accent-color);
 }
 
 .modal-form-button {
@@ -433,11 +399,7 @@ img {
   margin-right: 30px;
 }
 
-.menu-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-tel {
+.header-connect__tel {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -448,7 +410,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-mail {
+.header-connect__mail {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -467,13 +429,16 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-logo {
+.logo {
   font-family: 'Raleway';
   font-weight: bold;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+}
+
+.header__logo {
   margin-right: 93px;
 }
 
@@ -485,18 +450,56 @@ img {
   color: var(--primary-white-color);
 }
 
-.header-mail:hover,
-.header-mail:focus,
-.header-tel:hover,
-.header-tel:focus {
+.header-connect__mail:hover,
+.header-connect__mail:focus,
+.header-connect__tel:hover,
+.header-connect__tel:focus {
   color: var(--accent-color);
 }
 
-.header-mail:hover .address-icon,
-.header-mail:focus .address-icon,
-.header-tel:hover .address-icon,
-.header-tel:focus .address-icon {
+.header-connect__mail:hover .address-icon,
+.header-connect__mail:focus .address-icon,
+.header-connect__tel:hover .address-icon,
+.header-connect__tel:focus .address-icon {
   fill: var(--accent-color);
+}
+
+.header-nav__list .link.current {
+  color: var(--accent-color);
+}
+
+.header-nav__list {
+  display: flex;
+}
+
+.header-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.header-nav__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+
+.header-nav__link:hover, .header-nav__link:focus {
+  color: var(--accent-color);
+}
+
+.header-nav__link.current::after {
+  content: '';
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  position: absolute;
+  left: 0;
+  bottom: -32px;
+  cursor: default;
 }
 
 .hero {
