--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -90,34 +90,35 @@
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-}
-.modal-form-checkbox-label::before {
-    content: '';
-    display: block;
-    width: 16px;
-    height: 15px;
-    border: 2px solid #212121;
-    border-radius: 2px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    margin-right: 7px;
+    &::before {
+        content: '';
+        display: block;
+        width: 16px;
+        height: 15px;
+        border: 2px solid #212121;
+        border-radius: 2px;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+            0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+        margin-right: 7px;
+    }
+
+    .modal-form-checkbox:checked + &::before {
+        background-image: url(../images/icon-check.svg);
+        background-color: var(--accent-color);
+        border: 1px solid var(--accent-color);
+        background-origin: border-box;
+    }
+
+    .modal-form-checkbox:focus + &::before {
+        outline: 0.5px solid black;
+    }
 }
 
 .accept-policy-contract {
     color: var(--accent-color);
 }
 
-.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
-    background-image: url(../images/icon-check.svg);
-    background-color: var(--accent-color);
-    border: 1px solid var(--accent-color);
-    background-origin: border-box;
-}
-
-.modal-form-checkbox:focus + .modal-form-checkbox-label::before {
-    outline: 0.5px solid black;
-}
 .modal-form-button {
     font-style: normal;
     font-weight: bold;
