--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -21,11 +21,7 @@
     margin-right: 30px;
 }
 
-.menu-item:not(:last-child) {
-    margin-right: 50px;
-}
-
-.header-tel {
+.header-connect__tel {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -37,7 +33,7 @@
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-mail {
+.header-connect__mail {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -55,30 +51,71 @@
     fill: #757575;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-logo {
+.logo {
     font-family: 'Raleway';
     font-weight: bold;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--accent-color);
+}
+
+.header__logo {
     margin-right: 93px;
 }
+
 .dark-color {
     color: var(--primary-text-color);
 }
 .white-color {
     color: var(--primary-white-color);
 }
-.header-mail:hover,
-.header-mail:focus,
-.header-tel:hover,
-.header-tel:focus {
+.header-connect__mail:hover,
+.header-connect__mail:focus,
+.header-connect__tel:hover,
+.header-connect__tel:focus {
     color: var(--accent-color);
 }
-.header-mail:hover .address-icon,
-.header-mail:focus .address-icon,
-.header-tel:hover .address-icon,
-.header-tel:focus .address-icon {
+.header-connect__mail:hover .address-icon,
+.header-connect__mail:focus .address-icon,
+.header-connect__tel:hover .address-icon,
+.header-connect__tel:focus .address-icon {
     fill: var(--accent-color);
+}
+
+.header-nav__list .link.current {
+    color: var(--accent-color);
+}
+
+.header-nav__list {
+    display: flex;
+}
+.header-nav__item:not(:last-child) {
+    margin-right: 50px;
+}
+.header-nav__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
+}
+
+.header-nav__link.current::after {
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    bottom: -32px;
+    cursor: default;
 }
