--- a/css/main.css
+++ b/css/main.css
@@ -89,8 +89,8 @@ img {
 }
 
 .section-title {
-  font-weight: bold;
   font-size: 14px;
+  font-weight: bold;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -99,10 +99,10 @@ img {
 }
 
 .section-text {
-  margin-top: 10px;
-  font-weight: normal;
   font-size: 14px;
+  font-weight: normal;
   line-height: 1.71;
+  margin-top: 10px;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
@@ -127,10 +127,10 @@ img {
 }
 
 .main-btn {
-  font-family: inherit;
-  font-weight: bold;
   font-size: 16px;
+  font-weight: bold;
   line-height: 1.87;
+  font-family: inherit;
   text-align: center;
   letter-spacing: 0.06em;
   background-color: var(--accent-color);
@@ -217,10 +217,8 @@ img {
 }
 
 .modal-form-head {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
   font-size: 20px;
+  font-weight: bold;
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
@@ -228,10 +226,8 @@ img {
 }
 
 .modal-form-field {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
   font-size: 12px;
+  font-weight: normal;
   line-height: 1.17;
   letter-spacing: 0.01em;
   margin-bottom: 10px;
@@ -259,6 +255,9 @@ img {
 }
 
 .modal-form-message {
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 1.17;
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -267,10 +266,6 @@ img {
   margin-top: 6px;
   padding: 12px 16px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 1.17;
   letter-spacing: 0.01em;
 }
 
@@ -296,16 +291,14 @@ img {
 }
 
 .modal-form-checkbox-label {
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.71;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
-  font-size: 14px;
   color: #757575;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
@@ -337,9 +330,8 @@ img {
 }
 
 .modal-form-button {
-  font-style: normal;
-  font-weight: bold;
   font-size: 16px;
+  font-weight: bold;
   line-height: 1.87;
   letter-spacing: 0.06em;
   text-align: center;
@@ -400,8 +392,8 @@ img {
 }
 
 .header-connect__tel {
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
@@ -410,9 +402,14 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.header-connect__tel:hover, .header-connect__tel:focus {
+  color: var(--accent-color);
+  fill: var(--accent-color);
+}
+
 .header-connect__mail {
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
@@ -423,17 +420,28 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.header-connect__mail:hover, .header-connect__mail:focus {
+  color: var(--accent-color);
+}
+
 .address-icon {
   margin-right: 10px;
   fill: #757575;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.header-connect__mail:hover .address-icon,
+.header-connect__mail:focus .address-icon,
+.header-connect__tel:hover .address-icon,
+.header-connect__tel:focus .address-icon {
+  fill: var(--accent-color);
+}
+
 .logo {
-  font-family: 'Raleway';
-  font-weight: bold;
   font-size: 26px;
+  font-weight: bold;
   line-height: 1.19;
+  font-family: 'Raleway';
   letter-spacing: 0.03em;
   color: var(--accent-color);
 }
@@ -450,20 +458,6 @@ img {
   color: var(--primary-white-color);
 }
 
-.header-connect__mail:hover,
-.header-connect__mail:focus,
-.header-connect__tel:hover,
-.header-connect__tel:focus {
-  color: var(--accent-color);
-}
-
-.header-connect__mail:hover .address-icon,
-.header-connect__mail:focus .address-icon,
-.header-connect__tel:hover .address-icon,
-.header-connect__tel:focus .address-icon {
-  fill: var(--accent-color);
-}
-
 .header-nav__list .link.current {
   color: var(--accent-color);
 }
@@ -477,8 +471,8 @@ img {
 }
 
 .header-nav__link {
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
@@ -515,8 +509,8 @@ img {
 }
 
 .hero-title {
-  font-weight: 900;
   font-size: 44px;
+  font-weight: 900;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
@@ -527,8 +521,8 @@ img {
 }
 
 .hero-text {
-  font-weight: bold;
   font-size: 16px;
+  font-weight: bold;
   line-height: 1.87;
   text-align: center;
   letter-spacing: 0.06em;
@@ -548,8 +542,8 @@ img {
 }
 
 .desc-title {
-  font-weight: bold;
   font-size: 36px;
+  font-weight: bold;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
@@ -563,8 +557,8 @@ img {
 }
 
 .desc-text {
-  font-weight: normal;
   font-size: 16px;
+  font-weight: normal;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
@@ -574,8 +568,8 @@ img {
 }
 
 .desc-title-text {
-  font-weight: 500;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
@@ -599,8 +593,8 @@ img {
 }
 
 .desc-text-img {
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
@@ -633,11 +627,9 @@ img {
 }
 
 .clients-title {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
   font-size: 36px;
-  line-height: 42px;
+  font-weight: bold;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
@@ -686,26 +678,26 @@ img {
 }
 
 .portfolio-title {
-  font-weight: bold;
   font-size: 18px;
+  font-weight: bold;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-text-color);
 }
 
 .portfolio-title-text {
-  font-weight: normal;
   font-size: 16px;
+  font-weight: normal;
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 
 .portfolio-btn {
-  font-family: inherit;
-  font-weight: 500;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.62;
+  font-family: inherit;
   text-align: center;
   letter-spacing: 0.03em;
   padding: 6px 22px;
@@ -758,10 +750,8 @@ img {
 }
 
 .portfolio-focus-text {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
   font-size: 18px;
+  font-weight: normal;
   line-height: 1.56;
   letter-spacing: 0.03em;
   position: absolute;
@@ -797,10 +787,9 @@ img {
 }
 
 .footer-join-title {
-  font-style: normal;
-  font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  font-weight: 500;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
@@ -813,17 +802,17 @@ img {
 }
 
 .footer-address {
-  font-style: normal;
-  font-weight: normal;
   font-size: 14px;
+  font-weight: normal;
   line-height: 1.71;
+  font-style: normal;
   letter-spacing: 0.03em;
   margin-top: 20px;
 }
 
 .footer-mail {
-  font-weight: normal;
   font-size: 14px;
+  font-weight: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
@@ -831,8 +820,8 @@ img {
 }
 
 .footer-tele {
-  font-weight: normal;
   font-size: 14px;
+  font-weight: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
@@ -840,10 +829,10 @@ img {
 }
 
 .footer-logo {
-  font-family: 'Raleway';
-  font-weight: bold;
   font-size: 26px;
+  font-weight: bold;
   line-height: 1.19;
+  font-family: 'Raleway';
   letter-spacing: 0.03em;
   color: var(--accent-color);
   display: flex;
@@ -874,10 +863,8 @@ img {
 }
 
 .footer-mailing-text {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
   font-size: 14px;
+  font-weight: bold;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -886,34 +873,31 @@ img {
 }
 
 .footer-mailing-email {
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 1.25;
   resize: none;
   background-color: transparent;
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding: 10px;
   color: #ffffff;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.25;
   letter-spacing: 0.03em;
 }
 
 .footer-subscribe-button {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.87;
   padding: 10px 28px 10px 29px;
   margin-left: 12px;
   height: 50px;
   background-color: var(--accent-color);
   border: solid var(--accent-color);
   color: #ffffff;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.87;
   text-align: center;
   letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
