--- a/scss/components/_main-btn.scss
+++ b/scss/components/_main-btn.scss
@@ -1,8 +1,6 @@
 .main-btn {
+    @include font(16px, bold, 1.87);
     font-family: inherit;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.87;
     text-align: center;
     letter-spacing: 0.06em;
     background-color: var(--accent-color);
