--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -3,22 +3,14 @@
     flex-direction: column;
 }
 .modal-form-head {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 1.15;
+    @include font(20px, bold, 1.15);
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 12px;
 }
 
 .modal-form-field {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 1.17;
+    @include font(12px, normal, 1.17);
     letter-spacing: 0.01em;
     margin-bottom: 10px;
     color: #757575;
@@ -44,6 +36,7 @@
 }
 
 .modal-form-message {
+    @include font(12px, normal, 1.17);
     width: 100%;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -52,10 +45,6 @@
     margin-top: 6px;
     padding: 12px 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 1.17;
     letter-spacing: 0.01em;
     &:focus {
         outline: none;
@@ -79,16 +68,12 @@
 }
 
 .modal-form-checkbox-label {
+    @include font(14px, normal, 1.71);
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
-    font-size: 14px;
     color: #757575;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.71;
     letter-spacing: 0.03em;
     &::before {
         content: '';
@@ -120,10 +105,7 @@
 }
 
 .modal-form-button {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.87;
+    @include font(16px, bold, 1.87);
     letter-spacing: 0.06em;
     text-align: center;
     background-color: var(--accent-color);
