--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -1,9 +1,5 @@
 .clients-title {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 42px;
+    @include font(36px, bold, 1.17);
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
