--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -22,21 +22,22 @@
 }
 
 .header-connect__tel {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    @include font(14px, 500, 1.14);
     letter-spacing: 0.02em;
     color: var(--title-text-color);
     display: flex;
     flex-direction: row-reverse;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+        fill: var(--accent-color);
+    }
 }
 
 .header-connect__mail {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    @include font(14px, 500, 1.14);
     letter-spacing: 0.02em;
     color: var(--title-text-color);
     display: flex;
@@ -45,17 +46,25 @@
     justify-content: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 .address-icon {
     margin-right: 10px;
     fill: #757575;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .header-connect__mail:hover &,
+    .header-connect__mail:focus &,
+    .header-connect__tel:hover &,
+    .header-connect__tel:focus & {
+        fill: var(--accent-color);
+    }
 }
 .logo {
+    @include font(26px, bold, 1.19);
     font-family: 'Raleway';
-    font-weight: bold;
-    font-size: 26px;
-    line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--accent-color);
 }
@@ -70,18 +79,6 @@
 .white-color {
     color: var(--primary-white-color);
 }
-.header-connect__mail:hover,
-.header-connect__mail:focus,
-.header-connect__tel:hover,
-.header-connect__tel:focus {
-    color: var(--accent-color);
-}
-.header-connect__mail:hover .address-icon,
-.header-connect__mail:focus .address-icon,
-.header-connect__tel:hover .address-icon,
-.header-connect__tel:focus .address-icon {
-    fill: var(--accent-color);
-}
 
 .header-nav__list .link.current {
     color: var(--accent-color);
@@ -94,9 +91,7 @@
     margin-right: 50px;
 }
 .header-nav__link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    @include font(14px, 500, 1.14);
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
