--- a/css/main.css
+++ b/css/main.css
@@ -644,10 +644,6 @@ img {
   margin-right: 30px;
 }
 
-.logo-icon:last-child {
-  margin-right: 0;
-}
-
 .logo-after-icon {
   width: 170px;
   height: 92px;
@@ -658,8 +654,7 @@ img {
   background-repeat: no-repeat;
 }
 
-.logo-after-icon:hover,
-.logo-after-icon:focus {
+.logo-after-icon:hover, .logo-after-icon:focus {
   border-color: var(--accent-color);
 }
 
