--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -11,9 +11,7 @@
 .logo-icon:not(:last-child) {
     margin-right: 30px;
 }
-.logo-icon:last-child {
-    margin-right: 0;
-}
+
 .logo-after-icon {
     width: 170px;
     height: 92px;
@@ -22,10 +20,10 @@
     background-position: center;
     background-size: 106px;
     background-repeat: no-repeat;
-}
-.logo-after-icon:hover,
-.logo-after-icon:focus {
-    border-color: var(--accent-color);
+    &:hover,
+    &:focus {
+        border-color: var(--accent-color);
+    }
 }
 
 .clients-logo {
