--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -47,6 +47,9 @@
     flex-basis: calc(100% / 3 - 30px);
     margin-right: 30px;
     margin-bottom: 30px;
+    &:hover .portfolio-focus-text {
+        transform: translateY(0);
+    }
 }
 
 .portfolio-frame {
@@ -79,7 +82,4 @@
 .portfolio-item-wrap {
     position: relative;
     overflow: hidden;
-}
-.portfolio-main-title:hover .portfolio-focus-text {
-    transform: translateY(0);
 }
