--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -31,6 +31,10 @@
     color: rgba(255, 255, 255, 0.6);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 .footer-tele {
     @include font(14px, normal, 1.71);
@@ -38,6 +42,10 @@
     color: rgba(255, 255, 255, 0.6);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 .footer-logo {
     @include font(26px, bold, 1.19);
@@ -52,12 +60,6 @@
 .footer-container {
     display: flex;
     align-items: baseline;
-}
-.footer-tele:hover,
-.footer-tele:focus,
-.footer-mail:hover,
-.footer-mail:focus {
-    color: var(--accent-color);
 }
 
 .footer-mailing {
